# generate-infographic

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SKILL_README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/skills/: generate-infographic.md
docs/: api.md  configuration.md  usage.md
examples/: basic_usage.py
infographics_agent/: __init__.py  __main__.py  agent.py  cli.py  client.py  config.py  exceptions.py  prompt_templates.py
src/: __init__.py  config.py  infographic_agent.py  prompt_templates.py  sensenova_client.py
tests/: __init__.py  test_agent.py  test_client.py  test_config.py  test_prompt_templates.py
